--- a/DailyBudget.html
+++ b/DailyBudget.html
@@ -39,7 +39,7 @@
             </tr>
             </table>
         </section>
-    <script src="scripts/jquery.js"></script>
+    <script src="scripts/vendor/jquery.js"></script>
     <script src="scripts/jquery-script.js"></script>
 </body>
 </html>
